Adjusting issue on homepage on mobile where you cannot click button

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -29,7 +29,7 @@
         width: 100%;
         opacity: 0;
         transform: rotateZ(5deg);
-        z-index: 1;
+        z-index: 0;
     }
 }
 
