--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -17,6 +17,7 @@
         margin-left: 60px;
         margin-top: 30px;
         height: 100%;
+        z-index: 1000;
 
         h1 {
             font-size: 64px;
